--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -10,12 +10,14 @@
         margin: 0;
         padding: 0;
         background-color: #000000;
+        color: #ffffff;
         overflow: hidden;
       }
       #root {
         width: 100vw;
         height: 100vh;
         background-color: #000000;
+        color: #ffffff;
       }
     </style>
   </head>
