--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -11,11 +11,8 @@
         padding: 0;
         background-color: #000000;
         color: #ffffff;
-        overflow: hidden;
       }
       #root {
-        width: 100vw;
-        height: 100vh;
         background-color: #000000;
         color: #ffffff;
       }
